--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation Starter Template</title>
-<!-- Compressed CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Creative Studio</title>
+    <link rel="stylesheet" href="css/foundation-6.2.3/css/foundation.css">
+    <!--Main Stylesheet-->
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr.js"></script>
 
-<!-- Compressed JavaScript -->
-<script src="https://cdn.jsdelivr.net/foundation/6.2.1/foundation.min.js"></script>
-    <link rel="stylesheet" href="css/foundation.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!--Sticky Nav Menu Bar-->
+    <div data-sticky-container>
+<div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="0" data-btm-anchor="content:bottom">
+<div class="title-bar-left">327 creative studio</div>
+<div class="title-bar-right">
+  <ul>
+  <a href="#"></a><li>studio</li></a>
+  <a href="#"></a><li>projects</li></a>
+  <a href="#"></a><li>clients</li></a>
+  <a href="#"></a><li>contacts</li></a>
+  </ul>
+</div>
+</div>
+</div>
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
 
-  </body>
+
+
+
+
+    <script src="js/vendor/jquery.js"></script>
+  <script src="js/foundation.min.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
+</body>
+</html>
 </html>
