--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/foundation-6.2.3/css/foundation.css">
     <!--Main Stylesheet-->
     <link rel="stylesheet" href="css/main.css">
+    <!--Js modenizer-->
     <script src="js/vendor/modernizr.js"></script>
+    <!--Google Fonts-->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   </head>
   <body>
