modified info section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <!--Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!--Sticky Nav Menu Bar-->
@@ -29,6 +29,10 @@
 </div>
 </div>
 </div>
+<!--Intro Section-->
+<section class="intro">
+  <p>A small and <b>passionate design</b> studio, obsessed with<br> creating <b>beautiful brands</b> on a mission to deliver<br> the boldest <b>creative experiences</b>.</p>
+</section>
 
 
 
