--- a/index.html
+++ b/index.html
@@ -30,10 +30,28 @@
 </div>
 </div>
 <!--Intro Section-->
-<section class="intro">
+<section class="intro" style="width:100%">
   <p>A small and <b>passionate design</b> studio, obsessed with<br> creating <b>beautiful brands</b> on a mission to deliver<br> the boldest <b>creative experiences</b>.</p>
 </section>
-
+<!--Print Digital Section-->
+<div class="row">
+  <div class="medium-6 columns" style="background-color:#FFFFFF">
+  <img src="img/book.svg" style="height:350px; width:350px">
+  <h6>WHAT WE DO</h6>
+  <h1><b>Print</b></h1>
+  <p>As kids, we were addicted to colour books and comics.<br> 
+Today, we are stretching it by exploring type,<br>
+colors, shapes and printing techniques.</p>
+  </div>
+  <div class="medium-6 columns" style="background-color:#F6F7F7">
+  <img src="img/laptop.svg" style="height:350px; width:350px">
+  <h6>WHAT WE DO</h6>
+  <h1><b>Digital</b></h1>
+  <p>Portuguese was our first language, html came later.<br> 
+Now, we code with a design perspective that assures <br>
+your message is delivered anywhere.</p>
+  </div>
+</div>
 
 
 
