--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Js modenizer-->
     <script src="js/vendor/modernizr.js"></script>
     <!--Google Fonts-->
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -37,17 +38,17 @@
 <div class="row">
   <div class="medium-6 columns" style="background-color:#FFFFFF">
   <img src="img/book.svg" style="height:350px; width:350px">
-  <h6>WHAT WE DO</h6>
-  <h1><b>Print</b></h1>
-  <p>As kids, we were addicted to colour books and comics.<br> 
+  <h6 style="font-size:12px">WHAT WE DO</h6>
+  <h1 style="font-size:40px; font-weight:bold"><b>Print</b></h1>
+  <p style="font-size:16px">As kids, we were addicted to colour books and comics.<br> 
 Today, we are stretching it by exploring type,<br>
 colors, shapes and printing techniques.</p>
   </div>
   <div class="medium-6 columns" style="background-color:#F6F7F7">
   <img src="img/laptop.svg" style="height:350px; width:350px">
-  <h6>WHAT WE DO</h6>
-  <h1><b>Digital</b></h1>
-  <p>Portuguese was our first language, html came later.<br> 
+  <h6 style="font-size:12px">WHAT WE DO</h6>
+  <h1 style="font-size:40px; font-weight:bold"><b>Digital</b></h1>
+  <p style="font-size:16px">Portuguese was our first language, html came later.<br> 
 Now, we code with a design perspective that assures <br>
 your message is delivered anywhere.</p>
   </div>
