added text section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <!--Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -53,6 +53,13 @@ Now, we code with a design perspective that assures <br>
 your message is delivered anywhere.</p>
   </div>
 </div>
+<!--Image Slider-->
+<!--Text Section-->
+<section class="text">
+  <p>In every project, <b>we tailor</b> our thoughts closely with <b>our clients</b>,<br> 
+enabling <b>stronger and unique results</b> based on a<br>
+clean and structured communication.</p>
+</section>
 
 
 
