--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@ your message is delivered anywhere.</p>
 enabling <b>stronger and unique results</b> based on a<br>
 clean and structured communication.</p>
 </section>
-
-
-
-
-
+<!--Footer-->
+<footer class="foot">
+  <h3>Get in touch!</h3>
+  <h6>LET’S CREATE SOMETHING AMAZING</h6>
+  <ul>
+    <li><b>facebook</b></li>
+    <li><b>instagram</b></li>
+    <li><b>behance</b></li>
+  </ul>
+</footer>
     <script src="js/vendor/jquery.js"></script>
   <script src="js/foundation.min.js"></script>
   <script>
