--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@ your message is delivered anywhere.</p>
   </div>
 </div>
 <!--Image Slider-->
+<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+  <ul class="orbit-container">
+    <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span><img src="img/left.png"></button>
+    <button class="orbit-next"><span class="show-for-sr">Next Slide</span><img src="img/right.png"></button>
+    <li class="is-active orbit-slide">
+      <img class="orbit-image" src="img/tooth.jpg" alt="tooth" style="width:100%; height:400px">
+    </li>
+    <li class="orbit-slide">
+      <img class="orbit-image" src="img/doc.png" alt="doc" style="width:100%; height:400px">
+    </li>
+    <li class="orbit-slide">
+      <img class="orbit-image" src="img/drinks.jpg" alt="drinks" style="width:100%; height:400px">
+    </li>
+  </ul>
+</div>
 <!--Text Section-->
 <section class="text">
   <p>In every project, <b>we tailor</b> our thoughts closely with <b>our clients</b>,<br> 
@@ -70,8 +85,10 @@ clean and structured communication.</p>
     <li><b>behance</b></li>
   </ul>
 </footer>
-    <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.min.js"></script>
+    <script src="css/foundation-6.2.3/js/vendor/jquery.js"></script>
+    <script src="css/foundation-6.2.3/js/vendor/foundation.min.js"></script>
+    <script src="css/foundation-6.2.3/js/vendor/foundation.js"></script>
+    <script src="css/foundation-6.2.3/js/vendor/foundation.orbit.js"></script>
   <script>
     $(document).foundation();
   </script>
