--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!--Sticky Nav Menu Bar-->
-    <div data-sticky-container>
+    <div data-sticky-container style="z-index:2">
 <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="0" data-btm-anchor="content:bottom">
 <div class="title-bar-left">327 creative studio</div>
 <div class="title-bar-right">
@@ -54,7 +54,7 @@ your message is delivered anywhere.</p>
   </div>
 </div>
 <!--Image Slider-->
-<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit style="z-index:1">
   <ul class="orbit-container">
     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span><img src="img/left.png"></button>
     <button class="orbit-next"><span class="show-for-sr">Next Slide</span><img src="img/right.png"></button>
