--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="0" data-btm-anchor="content:bottom">
 <div class="title-bar-left">327 creative studio</div>
 <div class="title-bar-right">
+<nav>
   <ul>
   <a href="#"></a><li>studio</li></a>
   <a href="#"></a><li>projects</li></a>
   <a href="#"></a><li>clients</li></a>
   <a href="#"></a><li>contacts</li></a>
   </ul>
+  <div  class="handle">&#9776;&nbsp;Menu</div>
+</nav>
 </div>
 </div>
 </div>
@@ -37,7 +40,7 @@
 <!--Print Digital Section-->
 <div class="row">
   <div class="medium-6 columns" style="background-color:#FFFFFF">
-  <img src="img/book.svg" style="height:350px; width:350px">
+  <img src="img/book.svg" style="height:350px; width:350px; padding-right:30px"> 
   <h6 style="font-size:12px">WHAT WE DO</h6>
   <h1 style="font-size:40px; font-weight:bold"><b>Print</b></h1>
   <p style="font-size:16px">As kids, we were addicted to colour books and comics.<br> 
@@ -45,7 +48,7 @@ Today, we are stretching it by exploring type,<br>
 colors, shapes and printing techniques.</p>
   </div>
   <div class="medium-6 columns" style="background-color:#F6F7F7">
-  <img src="img/laptop.svg" style="height:350px; width:350px">
+  <img src="img/laptop.svg" style="height:350px; width:350px; padding-left:30px">
   <h6 style="font-size:12px">WHAT WE DO</h6>
   <h1 style="font-size:40px; font-weight:bold"><b>Digital</b></h1>
   <p style="font-size:16px">Portuguese was our first language, html came later.<br> 
@@ -91,6 +94,12 @@ clean and structured communication.</p>
     <script src="css/foundation-6.2.3/js/vendor/foundation.orbit.js"></script>
   <script>
     $(document).foundation();
+  </script>
+  <script type="text/javascript">
+    $('.handle').on('click', function(){
+       $('nav ul').toggleClass('showing');
+
+    });
   </script>
 </body>
 </html>
