--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Studio</title>
+    <!--Foundation link-->
     <link rel="stylesheet" href="css/foundation-6.2.3/css/foundation.css">
     <!--Main Stylesheet-->
     <link rel="stylesheet" href="css/main.css">
@@ -18,7 +19,7 @@
   <body>
     <!--Sticky Nav Menu Bar-->
     <div data-sticky-container style="z-index:2">
-<div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="0" data-btm-anchor="content:bottom">
+<div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%;background-color:rgba(255,255,237,0.8)" data-top-anchor="0" data-btm-anchor="content:bottom">
 <div class="title-bar-left">327 creative studio</div>
 <div class="title-bar-right">
 <nav>
